--- a/src/styles/base/passwordField.css
+++ b/src/styles/base/passwordField.css
@@ -4,7 +4,7 @@
 
 .o-passwordfield .smf-password {
   position: absolute;
-  top: 35%;
+  top: 15px;
   right: 1%;
   cursor: pointer;
   color: #9f9f9f;
