Feature(ProductDetail): completed

--- a/src/styles/base/passwordField.css
+++ b/src/styles/base/passwordField.css
@@ -2,7 +2,7 @@
   position: relative;
 }
 
-.o-passwordfield .smf-password {
+.o-passwordfield .icon-password {
   position: absolute;
   top: 15px;
   right: 1%;
@@ -10,14 +10,14 @@
   color: #9f9f9f;
 }
 
-.o-passwordfield .smf-password:hover {
+.o-passwordfield .icon-password:hover {
   color: #b9b9b9;
 }
 
-.o-passwordfield .smf-password:active {
+.o-passwordfield .icon-password:active {
   color: #797979;
 }
 
-.o-passwordfield .smf-password.o-selected {
+.o-passwordfield .icon-password.o-selected {
   color: var(--normal-purple);
 }
