--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,12 +7,14 @@
 
   --normal-white: #ffffff;
 
+  --light-gray: #CFCDCD;
+
   --error-color: #ff006c;
   --mask-color: #202329cc;
 
-  --font-size-xs: 0.7rem;
-  --font-size-s: 0.9rem;
-  --font-size-m: 1.2rem;
+  --font-size-xs: .7rem;
+  --font-size-s: .9rem;
+  --font-size-m: 1rem;
   --font-size-l: 2.25rem;
 
   --icon-xxl: 2.5rem;
