--- a/src/styles/base/passwordField.css
+++ b/src/styles/base/passwordField.css
@@ -7,15 +7,15 @@
   top: 15px;
   right: 1%;
   cursor: pointer;
-  color: #9f9f9f;
+  color: var(--normal-gray);
 }
 
 .o-passwordfield .icon-password:hover {
-  color: #b9b9b9;
+  color: var(--light-gray);
 }
 
 .o-passwordfield .icon-password:active {
-  color: #797979;
+  color: var(--dark-gray);
 }
 
 .o-passwordfield .icon-password.o-selected {
