--- a/src/styles/base/amountField.css
+++ b/src/styles/base/amountField.css
@@ -5,14 +5,14 @@
 .o-amountfield input {
   height: 100%;
   text-align: center;
-  border: 0.5px solid #9b4bf8;
+  border: 0.5px solid var(--normal-purple);
   border-radius: 12px;
 }
 
 .o-amountfield a {
   position: absolute;
   top: 11px;
-  color: #7315be;
+  color: var(--text-purple);
   font-weight: bolder;
   cursor: pointer;
 }
