--- a/src/styles/base/input.css
+++ b/src/styles/base/input.css
@@ -1,13 +1,13 @@
 .o-input {
   width: 100%;
   height: 2.5rem;
-  border: 1px solid #edf1f7;
+  border: 1px solid var(--border-input);
   border-radius: 16px;
   text-indent: 10px;
 }
 
 .o-input::placeholder {
-  color: #9f9f9f;
+  color: var(--normal-gray);
 }
 
 .o-input:focus-visible {
