--- a/src/styles/base/link.css
+++ b/src/styles/base/link.css
@@ -1,5 +1,5 @@
 .o-link {
-    color: #7315BE;
+    color: var(--text-purple);
     text-decoration: none;
     font-size: var(--font-size-s);
     margin: 1rem 0;
