--- a/src/styles/base/mask.css
+++ b/src/styles/base/mask.css
@@ -25,7 +25,7 @@ Tomado de https://loading.io/css/
   width: 13px;
   height: 13px;
   border-radius: 50%;
-  background: #fff;
+  background: var(--normal-white);
   animation-timing-function: cubic-bezier(0, 1, 1, 0);
 }
 .lds-ellipsis div:nth-child(1) {
