--- a/src/styles/product/sizesProduct.css
+++ b/src/styles/product/sizesProduct.css
@@ -13,9 +13,9 @@
   align-items: center;
 }
 .o-product-sizes .o-size.o-size-selected {
-  background: #ffffff 0% 0% no-repeat padding-box;
+  background: var(--normal-white) 0% 0% no-repeat padding-box;
   box-shadow: inset 0px 3px 6px #00000029;
-  border: 1px solid #7315be;
+  border: 1px solid var(--text-purple);
   border-radius: 4px;
-  color: #7315be;
+  color: var(--text-purple);
 }
